--- a/src/componentsCSS/DragGame.css
+++ b/src/componentsCSS/DragGame.css
@@ -1,7 +1,7 @@
 .drag-game {
   display: flex;
   flex-direction: column;
-  gap: 4vh;
+  gap: 2vh;
   text-align: center;
   touch-action: none; /* חשוב למובייל */
   position: relative; /* container for absolutely-positioned dragged image */
@@ -9,6 +9,9 @@
   padding: 0vh 4vw 4vh;
   margin-top: 2vh;
   border-radius: 2vh;
+    height: 50%;
+  max-height: 90vh;
+  overflow: hidden;
 }
 
 .parties {
@@ -36,7 +39,7 @@
 .sector-box {
   width: 28vw;
   max-width: 140px;
-  min-height: 120px;
+  min-height: 100px;
   border: 2px dashed #1bbfe5;
   border-radius: 16px;
   display: flex;
