--- a/src/componentsCSS/Home.css
+++ b/src/componentsCSS/Home.css
@@ -20,7 +20,7 @@ position: fixed;
 
 .home-title{
     font-family: "karantina";
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 400;
     position: absolute;
     right: 50%;
@@ -39,7 +39,7 @@ position: fixed;
         right: 50%;
         transform: translateX(50%);
         width: 90vw;
-        margin-top: 40vh;
+        margin-top: 30vh;
         text-align: right;
         direction: rtl;
 
@@ -80,7 +80,7 @@ position: fixed;
         padding: 1.5vw;
         right: 50%;
         transform: translateX(50%);
-        margin-top: 106vh;
+        margin-top: 165%;
         box-shadow: 9px 10px 20px #323030, -3px -3px 5px rgba(255, 255, 255, 0.2);
 }
 
@@ -127,7 +127,7 @@ position: fixed;
         width: 100vw;
         height: 40vh;
         background-color: rgb(238, 238, 238);
-        margin-top: 126vh;
+        margin-top: 200%;
         right: 50%;
         transform: translateX(50%);
         direction: rtl;
